apps/cc-ui/overlays/aws-us-west-2-cc-smarsh-test/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cc-route-cc-ui-test
spec:
  hosts:
    - "cloudcapture.cc-test.internal.smarsh.us-west-2.aws.smarsh.cloud"
  gateways:
    - istio-ingress/apps-https-tcp-gw-ep-mt-smarsh-cc-test
  http:
    - route:
        - destination:
            host: cc-ui
      match:
        - uri:
            prefix: "/"
